# user_character_model.go
@@ -5,15 +5,15 @@ import (
 	"fmt"
 )
 
-func composeUserCharacter(tx *sql.Tx, baseUserCharacter, materialUserCharacter UserCharacter) error {
+func composeUserCharacter(tx *sql.Tx, baseUserCharacter, materialUserCharacter UserCharacter) (int, error) {
 	baseUserCharacter.experience = baseUserCharacter.experience + materialUserCharacter.character.calorie
 
 	if err := updateUserCharacter(tx, baseUserCharacter); err != nil {
-		return fmt.Errorf("userCharacter.updateUser failed: %w", err)
+		return 0, fmt.Errorf("userCharacter.updateUser failed: %w", err)
 	}
 
 	if err := deleteUserCharacter(tx, materialUserCharacter.id); err != nil {
-		return fmt.Errorf("materialUserCharacter.deleteUserCharacter failed: %w", err)
+		return 0, fmt.Errorf("materialUserCharacter.deleteUserCharacter failed: %w", err)
 	}
-	return nil
+	return baseUserCharacter.experience, nil
 }
